LET THE GAMES BEGIN 👾👽

--- a/adventuregamev2.html
+++ b/adventuregamev2.html
@@ -59,7 +59,7 @@
   function stuff()
   {
     // gameStart - room0
-    message[0] = "Do you REALLY want to play a game?";
+    message[0] = "Do you want to play a game?";
 
     // stage 1 - room1
     message[1] = "You wake up. It's dark.";
